--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="SEALED | SEALED">
-  <meta name="description" content="SEALED | SEALED">
+  <meta name="keywords" content="FAST X | FAST X">
+  <meta name="description" content="FAST X | FAST X">
   <meta name="robots" content="noindex,nofollow">
-  <title>Sealed Admin</title>
-  <link rel="icon" type="image/x-icon" href="./assets/images/sealed-logo.png">
+  <title>Fast X Admin</title>
+  <link rel="icon" type="image/x-icon" href="./assets/images/fast-x_logo.png">
   <link rel="stylesheet" href="./assets/styles/icons/fontawesome-free-6.0.0-web/css/all.css">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
